Project Development Phase/Sprint 4/Inventory Management System/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
spec:
    replicas: 5
    selector:
        matchLabels:
            app: app
    template:
        metadata:
            labels:
                app: app
        spec:
            containers:
                - name: app
                  image: jp.icr.io/inventorynamespace/app
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 5000
                        protocol: TCP
