Project Development Phase/Sprint 4/Inventory Management System/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: app-service
spec:
    type: ClusterIP
    ports:
        - port: 5000
          targetPort: 5000
    selector:
        app: app
