Project Development Phase/Sprint 4/Inventory Management System/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: app1-ingress
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
    rules:
        - http:
              paths:
                  - backend:
                        service:
                            name: app1-service
                            port:
                                number: 5000
                    path: /
                    pathType: Prefix
